HelloUltraviolet/Fixtures/RejectedSource/Expressions/AllOperandYields/Expected.uv
//! Expected diagnostic metadata for the AllOperandYields rejected-source specimen.

expectedDiagnostic("E-CON-0270", "rule.21.All-Out-Err")
